--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,181 @@
-.App{
-    background-color: black;
+body,
+html {
+    height: 100%;
 }
+
+.view {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url(https://cdn.pixabay.com/photo/2016/06/02/02/33/triangles-1430105_960_720.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1rem;
+}
+
+/* LOGIN */
+
+.veibi-container {
+    color: #f6bd60;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5em;
+}
+
+.veibi-logo {
+    filter: invert(11%) sepia(28%) saturate(1060%) hue-rotate(177deg) brightness(97%) contrast(88%);
+}
+
+.text-cutout {
+    mix-blend-mode: screen;
+    padding-top: 0.3em;
+    margin-bottom: -0.2em;
+}
+
+h1 {
+    font-family: Josefin Sans;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+h3 {
+    font-weight: 400;
+    color: #1e293b;
+}
+.btn {
+    background-color: #fff;
+    border: 0 solid #e2e8f0;
+    border-radius: 1.5rem;
+    box-sizing: border-box;
+    color: #0d172a;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1;
+    margin-top: 1.5em;
+    padding: 1rem 1.6rem;
+    text-align: center;
+    transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+}
+
+.btn:hover {
+    background-color: #1e293b;
+    color: #fff;
+}
+
+
+/* DASHBOARD */
+input.form-control {
+    background-color: #0d172a;
+    position: relative;
+    width: 23rem;
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #f6bd60;
+    border: 1.5px solid #e2e8f0;
+}
+
+input.form-control:focus {
+    background-color: #0d172abb;
+    color: #f6bd60;
+}
+
+.search-results {
+    background-color: #0d172abb;
+    width: 23rem;
+    border-radius: 0.375rem;
+    border: 1.5px solid #e2e8f0;
+}
+
+.track-item {
+    background-color: #0d172abb;
+    border-radius: 0.375rem;
+}
+
+.track-item:hover{
+    background-color: #0d172a;
+    border-color: 4px solid #9a9da1;
+}
+.track-img {
+    padding: 0.5rem;
+    border-radius: 10px;
+}
+
+.track-title {
+    color: #f6bd60;
+    font-size:medium
+}
+
+.track-title:hover{
+    font-weight: bolder;
+    pointer-events: visible;
+}
+
+.track-artist {
+    color: #9a9da1;
+}
+
+.track-artist:hover{
+    text-decoration: underline;
+}
+
+.lyrics-text{
+    color: #f6bd60e3;
+    text-align: center;
+    font-family: Josefin sans;
+    font-size: 14px;
+    font-weight: 200;
+    padding-right: .5rem;
+    margin: 0 1rem;
+    border-radius: 0.375rem;
+}
+
+/*PLAYER*/
+div.PlayerRSWP{
+    width: 23rem;
+    min-height: 48px;
+    border: 1.5px solid #e2e8f0;
+}
+
+a.PlayerRSWP{
+    color: #f6bd60;
+    font-size:medium
+}
+
+.PlayerRSWP * { 
+    color: #e2e8f0;
+}
+._ContentRSWP, ._VolumeRSWP, .PlayerRSWP, ._DevicesRSWP{
+    background-color: #0d172a;
+}
+
+.__77inad p a {
+    font-weight: 400;
+    color:#f6bd60;
+}
+.__77inad p:last-child a {
+    color: #9a9da1;
+}
+
+
+/* @media (min-width: 768px) {
+    .view{
+        padding:2rem;
+        width: 100%;
+    }
+    .btn {
+        font-size: 1.125rem;
+        padding: 1rem 2rem;
+    }
+    input.form-control, .search-results{
+        width: 44rem;
+    }
+    .lyrics-text{
+        font-size:12px;
+    }
+} */
